# AETHER-DFT

./: .gitignore  AGENTS.md  LICENSE  README.md  aether.cmd  aether.ps1  demo-aether.ps1  pyproject.toml  智能体架构.md
.github/workflows/: ci.yml
aether_dft/: adsorption.py  adsorption_authoring.py  adsorption_feedback.py  agent.py  agent_tools.py  auto_campaign.py  auto_mode.py  campaign_dossier.py  candidate_outcomes.py  chat.py  chemistry_compute.py  cli.py  context.py  context_budget.py  context_digests.py  convergence.py  discussion_snapshot.py  evaluation.py  fast_path.py  followups.py  general_agent_tools.py  harness.py  job_watcher.py  knowledge.py  model_catalog.py  paths.py  permissions.py  preload.py  project_state.py  prompt_engine.py  prompt_sections.py  real_case_validation.py  recommendations.py  research_benchmark.py  research_benchmark_live.py  research_continuity.py  research_loop.py  research_sync.py  research_vasp_templates.py  research_workspace.py  (+6 more)
aether_dft/prompt_assets/: system_chemistry.md
aether_dft/runtime_harness/: __init__.py  core.py  session.py  tool_catalog.py  tool_registry.py
config/: model_providers.example.json  model_runtime.json  permissions.json  system_prompt.md
dft_app/: __init__.py  cluster_profiles.py  submission_gate.py
dft_app/analyzer/: __init__.py  markdown_report_analyzer.py
dft_app/builder/: __init__.py  structure_resolver.py  vasp_input_generator.py  workspace_builder.py
dft_app/cli/: README.md  __init__.py  main.py
dft_app/exporter/: __init__.py  deliverable_exporter.py
dft_app/integrations/: __init__.py  dft_tools_bridge.py
dft_app/llm/: __init__.py  builtin_config.py  domestic_copilot_adapter.py  external_call_helper.py  key_store.py  (+2 more)
dft_shared/: README.md  __init__.py  analysis_dossier.py  chemistry_hints.py  cluster_submit.py  constants.py  llm_advisor.py  llm_client.py  openssh_backend.py  poscar_writer.py  pyproject.toml  remote_backend.py  remote_config.py  result_interpreter.py  winscp_backend.py  workflow_config.py
dft_shared/knowledge_base/: __init__.py  matcher.py  migrate.py  models.py  store.py
dft_shared/structure_analyzer/: __init__.py  bond_analyzer.py  comparator.py  io.py  operations.py  serializer.py  tool_registry.py
docs/: ARCHITECTURE.md  CLI_FRONTEND_DESIGN.md  DELIVERY.md  MIGRATION_PLAN.md  N1_SOFT_PLAN_VALIDATION_BRANCH_NOTE.md  PAPER_INNOVATION.md  QUICKSTART.md  TOOL_CATALOG_N3.md
research/: AGENTS.md
scripts/: build_campaign_dossier.py  real_acceptance_smoke.py  run_research_continuity_benchmark.py
tests/: temp_workspace.py  test_aether_adsorption_autopilot.py  test_aether_adsorption_feedback.py  test_aether_adsorption_plan_authoring.py  test_aether_auto_campaign.py  test_aether_auto_mode.py  test_aether_campaign_dossier.py  test_aether_candidate_outcomes.py  test_aether_chemistry_context_tools.py  test_aether_cli_harness.py  test_aether_cluster_agent_tools.py  test_aether_cluster_realtime.py  test_aether_evaluation.py  test_aether_fast_path.py  test_aether_followups.py  test_aether_guided_flow_completion.py  test_aether_llm_runtime.py  test_aether_m14_m17_completion.py  test_aether_model_authored_candidates.py  test_aether_phase6_primitives.py  test_aether_prompt_context_harness.py  test_aether_real_case_validation.py  test_aether_research_benchmark.py  test_aether_research_benchmark_live.py  test_aether_research_continuity.py  test_aether_session_tools.py  test_aether_task_kb.py  test_aether_tool_discovery.py  test_harness_architecture.py  test_llm_authored_adsorption_e2e.py  test_n3_tool_catalog.py  test_permission_security.py  web_ui_test_support.py
(+128 files in other folders)
