[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dft-shared"
version = "0.1.0"
description = "Shared infrastructure for DFT tools: remote backends, workflow config, knowledge helpers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["dft_shared*"]
